Implemented some indexing/search functionality
